--- a/resource/style.css
+++ b/resource/style.css
@@ -6349,3 +6349,20 @@ ul.insta-info-list {
   .font-18{
     font-size:18px;
   }
+
+  .videowrapper {
+    float: none;
+    clear: both;
+    width: 100%;
+    position: relative;
+    padding-bottom: 56.25%;
+    padding-top: 25px;
+    height: 0;
+}
+.videowrapper iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
